changed package.json name key

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "201026-Node-API-1",
+  "name": "201026-node-api-1",
   "version": "1.0.0",
   "description": "## Introduction",
   "main": "index.js",
