--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "server": "nodemon index.js"
   },
   "dependencies": {
+    "express": "^4.17.1",
+    "shortid": "^2.2.16"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.6"
   }
 }
